style panel-title on collapse fixé

--- a/css/home.css
+++ b/css/home.css
@@ -303,13 +303,8 @@ input.btn.btn-default {
   padding-top: 2px;
 }
 
-img#eavest {
-  transform: translate(15px, -2px);
-}
-
-
 .margin {
-  /*margin-left: 8px;*/
+  margin-left: 8px;
   vertical-align: -webkit-baseline-middle;
 }
 
@@ -320,18 +315,62 @@ img#eavest {
   border-radius: 0 !important;
 }
 
-.panel-title {
+a.panel-heading {
+    margin: 0;
+    padding: 0;
+}
+
+.panel-body {
+  margin: -4px;
+  padding: 0;
+}
+
+/*.panel-title {
   color: #4A4A4A;
   font-weight: 100;
-}
+}*/
 
 .panel-body {
   background-color: #F2F2F2 !important;
 }
 
-.active {
-  background: red;
+#accor-product {
+  width: 102px;
+  height: 133px;
+  margin-bottom: 25px;
 }
+
+
+
+/*test*/
+a,
+a:hover,
+a:active,
+a:focus {
+  text-decoration: none !important
+}
+.panel-heading:hover,
+.panel-heading:focus,
+.panel-heading:hover a,
+.panel-heading:focus a {
+  color: #4A4A4A;
+  font-weight: 100;
+  text-decoration: none !important;
+}
+.activestate {
+  font-weight: bold !important;
+  color: black !important;
+  display: block;
+}
+.activestate:hover a {
+  color: grey;
+  font-weight: 100;
+}
+.panel-heading {
+  display: block
+}
+
+/*end test*/
 
 /*.panel-heading[aria-expanded="true"] {
 	background-color: #286090;
@@ -341,17 +380,17 @@ img#eavest {
 	background-color: white;
 }*/
 
-/*.grey-letters.collapsed {
+/*.panel-title.collapsed {
   font-weight: bold !important;
-  color: black !important;;
+  color: black !important;
 }*/
 
-/*.heading [data-toggle="collapse"] > span{
+/*.panel-heading [data-toggle="collapse"] > span{
   font-weight: bold;
   color: black;
 }
 
-.heading [data-toggle="collapsed"]:collapsed > span{
+.panel-heading [data-toggle="collapsed"]:collapsed > span{
   font-weight: 100;
   color: grey;
 }*/
